# sfml-snake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  player.hpp  vcpkg-configuration.json  vcpkg.json  window.hpp
